# gitty

./: CMakeLists.txt  workspace.cpp
include/commands/: command.h  command_factory.h  commit_command.h  init_command.h
include/core/: author.h  blob.h  commit.h  database.h  entry.h  git_object.h  tree.h  tree_builder.h  workspace.h
src/: main.cpp
src/commands/: command_factory.cpp  commit_command.cpp  init_command.cpp
src/core/: author.cpp  blob.cpp  commit.cpp  database.cpp  entry.cpp  git_object.cpp  tree.cpp  tree_builder.cpp  workspace.cpp
